--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>mical</title>
+      <title>nextlevel</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -64,16 +64,19 @@
                                  <a class="nav-link" href="index.html"> Home  </a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">About</a>
+                                 <a class="nav-link" href="#about">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="furnitures.html">Furnitures</a>
+                                 <a class="nav-link" href="#wedo">Features</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="testimonial.html">Testimonial</a>
+                                 <a class="nav-link" href="#testimonial">Staff</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="contact.html">Contact Us</a>
+                                 <a class="nav-link" href="#contact">Contact Us</a>
+                              </li>
+                              <li class="nav-item">
+                                 <a class="nav-link" href="#biography">Biography</a>
                               </li>
                            </ul>
                         </div>
@@ -101,11 +104,7 @@
                                  <a href="#">More Info </a> <a href="#">Contact Us</a>
                               </div>
                            </div>
-                           <div class="col-md-6">
-                              <div class="text_img">
-                                 <figure><img src="images/car.png" alt="#"/></figure>
-                              </div>
-                           </div>
+                           
                         </div>
                      </div>
                   </div>
@@ -121,21 +120,21 @@
                <div class="col-md-4">
                   <div class="box_text">
                      <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr.png" alt="#"/></i>
+                     <i><img id="img1" src="images/thr.png" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr1.png" alt="#"/></i>
+                     <h3>OIL CHANGING</h3>
+                     <i><img id="img2" src="images/thr1.png" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_text">
-                     <h3>AUTO DIAGNOSE</h3>
-                     <i><img src="images/thr2.png" alt="#"/></i>
+                     <h3>WHEEL ALINGMENT</h3>
+                     <i><img id="img3" src="images/thr2.png" alt="#"/></i>
                      <p>ipsum dolor sit amet, consectetur adipiscing elit, sed d veniam, adipiscing elit, sed d veniam</p>
                   </div>
                </div>
@@ -144,7 +143,7 @@
       </div>
       <!-- three_box -->
       <!-- about -->
-      <div  class="about">
+      <div id="about" class="about">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -170,7 +169,7 @@
       </div>
       <!-- end about -->
       <!-- wedo  section -->
-      <div class="wedo ">
+      <div id= "wedo" class="wedo ">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
@@ -188,7 +187,7 @@
                            <figure><img src="images/img1.png" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>PREVENTATIVE MAINTENANCE<br><span class="blu">Total Service</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
@@ -196,7 +195,7 @@
                            <figure><img src="images/img2.png" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>TIRES<br><span class="blu">Total Service</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
@@ -204,7 +203,7 @@
                            <figure><img src="images/img3.png" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br> <span class="blu">Total Service</span></h3>
+                           <h3>OIL CHANGES<br> <span class="blu">Total Service</span></h3>
                         </div>
                      </div>
                      <div class="col-md-6 margin_bottom">
@@ -212,7 +211,39 @@
                            <figure><img src="images/img4.png" alt="#" /></figure>
                         </div>
                         <div class="work_text">
-                           <h3>Quick repair<br><span class="blu">Total Service</span></h3>
+                           <h3>SUSPENSION<br><span class="blu">Total Service</span></h3>
+                        </div>
+                     </div>
+                     <div class="col-md-6 margin_bottom">
+                        <div class="work">
+                           <figure><img src="images/img4.png" alt="#" /></figure>
+                        </div>
+                        <div class="work_text">
+                           <h3>MOTOR MOUNTS<br><span class="blu">Total Service</span></h3>
+                        </div>
+                     </div>
+                     <div class="col-md-6 margin_bottom">
+                        <div class="work">
+                           <figure><img src="images/img4.png" alt="#" /></figure>
+                        </div>
+                        <div class="work_text">
+                           <h3>OIL LEAKS<br><span class="blu">Total Service</span></h3>
+                        </div>
+                     </div>
+                     <div class="col-md-6 margin_bottom">
+                        <div class="work">
+                           <figure><img src="images/img4.png" alt="#" /></figure>
+                        </div>
+                        <div class="work_text">
+                           <h3>ENGINE REPLACEMENTS<br><span class="blu">Total Service</span></h3>
+                        </div>
+                     </div>
+                     <div class="col-md-6 margin_bottom">
+                        <div class="work">
+                           <figure><img src="images/img4.png" alt="#" /></figure>
+                        </div>
+                        <div class="work_text">
+                           <h3>TRANSMISSION<br><span class="blu">Total Service</span></h3>
                         </div>
                      </div>
                   </div>
@@ -223,12 +254,12 @@
       </div>
       <!-- end wedo  section -->
       <!-- testimonial -->
-      <div class="testimonial">
+      <div id = "testimonial" class="testimonial">
          <div class="container">
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Testimonial</h2>
+                     <h2>Stuff</h2>
                      <p>It is a long established fact that a reader will be distracted by the </p>
                   </div>
                </div>
@@ -329,6 +360,13 @@
          </div>
       </div>
       <!-- end testimonial -->
+      <div class="biography">
+         <div class="container">
+             <h1>About Us</h1>
+             <p>Welcome to [Your Company Name], where we [describe what you do]. Our mission is to [state your mission or vision]. Welcome to [Your Company Name], where we transform your ideas into reality with exceptional [products/services]. Founded in [Year of Establishment], our mission is to [state your mission or vision], achieved through innovation, integrity, and a customer-focused approach. Our team, led by visionary CEO Jane Doe, COO John Smith, and Head of Marketing Emily Johnson, brings extensive expertise and dedication to every project. We pride ourselves on delivering high-quality solutions that exceed expectations and make a positive impact. Thank you for choosing [Your Company Name]—we look forward to partnering with you and helping you achieve your goals.</p>
+             </div>
+         </div>
+     </div>
       </div>
       <!--  footer -->
       <footer id="contact">
@@ -340,11 +378,11 @@
                         <h2>Contact Us</h2>
                      </div>
                   </div>
-                  <div class="col-md-8">
+                  <div class="col-md-6">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> 2050 Byberry Road (Unit Rear) Philadelphia, PA. 19116</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> (215)674-9274</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>NextLevelAutomotive1@gmail.com</li>
                      </ul>
                   </div>
                   <div class="col-md-6">
@@ -378,7 +416,7 @@
                   </div>
                   <div class="col-md-6">
                      <div class="map">
-                        <figure><img src="images/map.jpg" alt="#"/></figure>
+                        <figure><img src="images/map.png" alt="#"/></figure>
                      </div>
                      <form class="bottom_form">
                         <h3>Newsletter</h3>
