added biography block

--- a/index.html
+++ b/index.html
@@ -384,14 +384,20 @@
          </div>
       </div>
       <!-- end testimonial -->
-      <div class="biography">
-         <div class="container">
-             <h1>About Us</h1>
-             <p>Welcome to [Your Company Name], where we [describe what you do]. Our mission is to [state your mission or vision]. Welcome to [Your Company Name], where we transform your ideas into reality with exceptional [products/services]. Founded in [Year of Establishment], our mission is to [state your mission or vision], achieved through innovation, integrity, and a customer-focused approach. Our team, led by visionary CEO Jane Doe, COO John Smith, and Head of Marketing Emily Johnson, brings extensive expertise and dedication to every project. We pride ourselves on delivering high-quality solutions that exceed expectations and make a positive impact. Thank you for choosing [Your Company Name]—we look forward to partnering with you and helping you achieve your goals.</p>
+      <section class="about-us">
+         <div class="about-us-container">
+           <div class="about-us-content">
+             <div class="about-us-image">
+               <img src="./images/biography.jpg" alt="Car Repair Shop">
              </div>
+             <div class="about-us-text">
+               <h2>About Us</h2>
+               <p>Welcome to XYZ Car Repair, your trusted partner in car maintenance and repair. With over 20 years of experience, we are committed to providing top-quality services to keep your vehicle running smoothly. Our team of skilled technicians is equipped with the latest tools and technology to handle all your car repair needs.</p>
+               <p>Whether you need routine maintenance, major repairs, or custom services, we are here to help. Customer satisfaction is our top priority, and we strive to deliver exceptional service at competitive prices. Visit us today and experience the difference!</p>
+             </div>
+           </div>
          </div>
-     </div>
-      </div>
+       </section>
       <!--  footer -->
       <footer id="contact">
          <div class="footer">
